unpackaged/main/default/objects/pse__Generic_Batch_Task__c/pse__Generic_Batch_Task__c.object-meta.xml
<CustomObject>
    <description>Used internally to control PSA batch processes.</description>
    <label>Generic Batch Task</label>
    <nameField>
        <label>Generic Batch Task</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Generic Batch Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>