unpackaged/main/default/objects/pse__Generic_Batch_Task__c/fields/pse__ApexJobId__c.field-meta.xml
<CustomField>
    <fullName>pse__ApexJobId__c</fullName>
    <label>Apex Job Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>