unpackaged/main/default/objects/pse__Generic_Batch_Task__c/fields/pse__BatchProcess__c.field-meta.xml
<CustomField>
    <fullName>pse__BatchProcess__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch Process</label>
    <referenceTo>pse__fflib_BatchProcess__c</referenceTo>
    <relationshipLabel>GenericBatchTasks</relationshipLabel>
    <relationshipName>GenericBatchTasks</relationshipName>
    <type>Lookup</type>
</CustomField>