unpackaged/main/default/objects/pse__Generic_Batch_Task__c/fields/pse__UniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>pse__UniqueIdentifier__c</fullName>
    <label>Unique Identifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>